--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
 
         <h1>Selam, Tunç Reis</h1>
-        <a href="2" type="buttton" class="cta">Çalışmalarım</a>
+        <a href="2" type="buttton" class="cta">Çalışmalarımm</a>
     </div>
 </div>
 
