--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div>
 
-        <h1>Selam, Tunç Reis</h1>
+        <h1>Selam, Tunç Reiss</h1>
         <a href="2" type="buttton" class="cta">Çalışmalarımmm</a>
     </div>
 </div>
