bacground page update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
 
         <h1>Hello, My World </h1>
-        <a href="2" type="buttton" class="cta">Çalışmalarım</a>
+        <a href="2" type="buttton" class="cta">Çalışmaları</a>
     </div>
 </div>
 
