--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div>
 
-        <h1>Hello, My World </h1>
-        <a href="2" type="buttton" class="cta">Çalışmaları</a>
+        <h1>Merhaba, bu bir test çalışmasıdır.</h1>
+        <a href="2" type="buttton" class="cta">Çalışmalarım</a>
     </div>
 </div>
 
