--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pratik Web Sitesi Çalışmasi</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<!-- Hero Section -->
-<section id="hero">
-
-<div class="hero container">
-
-    <div>
-
-        <h1>Merhaba, bu bir test çalışmasıdır.</h1>
-        <a href="2" type="buttton" class="cta">Çalışmalarım</a>
-    </div>
-</div>
-
-
-</section>
-<!--  End Hero Section -->
-<body>  
-</body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Pratik Web Sitesi Çalışmasi</title>
+      <link rel="stylesheet" href="style.css" />
+   </head>
+   <!-- Hero Section -->
+   <section id="hero">
+      <div class="hero container">
+         <div>
+            <h1>Sedat Tunç <span></span></h1>
+            <h1>Web Designer <span></span></h1>
+            <h1>Web Designer <span></span></h1>
+            <a href="#" type="buttton" class="cta">Çalışmalarım</a>
+         </div>
+      </div>
+   </section>
+   <!--  End Hero Section -->
+   <body></body>
 </html>
