--- a/index.html
+++ b/index.html
@@ -19,5 +19,23 @@
       </div>
    </section>
    <!--  End Hero Section -->
+
+   <!-- Services Section-->
+   <section id="services">
+      <div class="service container">
+         <div class="service-top">
+            <h1 class="section-title">Serv<span>i</span>ces</h1> 
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+               when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+         </div>
+         <div class="service-bottom"></div>
+         <div class="service-item">
+            <img src="https://img.icons8.com/stickers/50/000000/home.png"/>
+
+         </div>
+      </div>
+
+   <!-- Ebn services Section-->
    <body></body>
 </html>
